/*
SPDX-FileCopyrightText: 2022-present Intel Corporation

SPDX-License-Identifier: Apache-2.0
*/

////////////////////// xnap-commondatatypes.proto //////////////////////
// Protobuf generated from /xnap_v1.asn1 by asn1c-0.9.29
// XnAP-CommonDataTypes { itu-t(0) identified-organization(4) etsi(0) mobileDomain(0) ngran-access(22) modules(3) xnap(2) version1(1) xnap-CommonDataTypes(3) }

syntax = "proto3";

package xnap.v1;
option go_package = "github.com/onosproject/onos-e2t/api/xnap/v1/xnap-commondatatypes;xnapcommondatatypesv1";

import "validate/v1/validate.proto";
import "asn1/v1/asn1.proto";
import "google/protobuf/empty.proto";

// enumerated from xnap_v1.asn1:8675
enum Criticality {
    CRITICALITY_REJECT = 0;
    CRITICALITY_IGNORE = 1;
    CRITICALITY_NOTIFY = 2;
};

// enumerated from xnap_v1.asn1:8677
enum Presence {
    PRESENCE_OPTIONAL = 0;
    PRESENCE_CONDITIONAL = 1;
    PRESENCE_MANDATORY = 2;
};

// enumerated from xnap_v1.asn1:8690
enum TriggeringMessage {
    TRIGGERING_MESSAGE_INITIATING_MESSAGE = 0;
    TRIGGERING_MESSAGE_SUCCESSFUL_OUTCOME = 1;
    TRIGGERING_MESSAGE_UNSUCCESSFUL_OUTCOME = 2;
};

// constant Integer from xnap_v1.asn1:8665
// {-}
message MaxPrivateIes {
    // @inject_tag: aper:"valueLB:65535,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65535, json_name="value"];
};

// constant Integer from xnap_v1.asn1:8666
// {-}
message MaxProtocolExtensions {
    // @inject_tag: aper:"valueLB:65535,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65535, json_name="value"];
};

// constant Integer from xnap_v1.asn1:8667
// {-}
message MaxProtocolIes {
    // @inject_tag: aper:"valueLB:65535,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65535, json_name="value"];
};

// sequence from xnap_v1.asn1:8680
// {PrivateIE-ID}
message PrivateIeID {
    // choice from xnap_v1.asn1:8680
    oneof private_ie_id {
        // @inject_tag: aper:"choiceIdx:1,valueLB:0,valueUB:65535,"
        int32 local = 1 [ json_name="local"];
        // @inject_tag: aper:"choiceIdx:2,"
        string global = 2 [ json_name="global"];
    }
};

// range of Integer from xnap_v1.asn1:8684
// {ProcedureCode}
message ProcedureCode {
    // @inject_tag: aper:"valueLB:0,valueUB:255,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from xnap_v1.asn1:8687
// {ProtocolIE-ID}
message ProtocolIeID {
    // @inject_tag: aper:"valueLB:0,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 65535}, json_name="value"];
};


