/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

package e2ctypes;

enum ProcedureCode_t {
    ProcedureCode_id_dummy = 0;
    ProcedureCode_id_E2setup = 1;
    ProcedureCode_id_ErrorIndication = 2;
    ProcedureCode_id_Reset = 3;
    ProcedureCode_id_RICcontrol = 4;
    ProcedureCode_id_RICindication = 5;
    ProcedureCode_id_RICserviceQuery = 6;
    ProcedureCode_id_RICserviceUpdate = 7;
    ProcedureCode_id_RICsubscription = 8;
    ProcedureCode_id_RICsubscriptionDelete = 9;
}
